fixed about me text on mobile layout

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  padding-top: 150px;
+  padding-top: 158px;
+  display: flex;
 }
 
 .landing-page-pic {
@@ -57,8 +58,9 @@
   margin: auto;
   text-align: center;
   position: relative;
-  padding-top: 90px;
+  padding-top: 78px;
   padding-bottom: 20px;
+  flex: grow;
 }
 
 .banner-text h1 {
@@ -117,20 +119,21 @@
   color: grey;
 }
 
-.about-text {
-  margin-top: 200px;
+.about-me-text {
+  display: flex;
+  justify-content: center;
+  width: 75%;
+  margin: auto;
 }
-
 
 .about-me-text p {
   color: white;
   font-size: 18px;
   font-weight: lighter;
   font-family: 'Oxygen', sans-serif;
-  line-height: 1.8;
+  line-height: 1.6;
   text-align: left;
   color: #E9E3EA;
-  padding: 16px 200px 79px 200px;
 }
 
 .about-text hr {
@@ -254,6 +257,12 @@
 .contact-grid hr {
   width: 70%;
   margin: auto;
+}
+
+.contact-form {
+  margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 /*Resume page */
